<resources>
    <string name="app_name">Catatan Harian</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Catatan Harian</string>
    <string name="nav_header_subtitle">gifarlygian@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>

    <string name="nim">10118316</string>
    <string name="nama">Gian Gifarly</string>

    <string name="menu_note">Catatan Harian</string>
    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>

    <string name="text_judul">Judul</string>
    <string name="text_kategori">Kategori</string>
    <string name="text_catatan">Catatan</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_read_note">ReadNoteActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_create_note">CreateNote</string>
</resources>